Fix post footer alignment on mobile

--- a/_sass/modules/blog/_post-footer.scss
+++ b/_sass/modules/blog/_post-footer.scss
@@ -1,7 +1,6 @@
 .post-footer {
   @include flex(0 0 100%);
-  max-width: $medium-content;
-  margin: $u-space-small auto 0;
+  margin-top: $u-space-small;
   font-family: $bold-font;
   font-size: $base-font-size-1;
   line-height: 1.6;
